--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -31,4 +31,7 @@ jobs:
     - name: Add Velero to PATH
       run:
         setx PATH "%PATH%;%CD%"
-      
+    - name: Install velero in eks
+      run:  
+        velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 --no-secret 
+
