--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -30,7 +30,7 @@ jobs:
        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero.exe -o velero.exe
     - name: Check PATH
       run: |
-       echo %PATH%
+       setx PATH "%PATH%;%CD%"
     - name: Install velero in eks
       run:  
         velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 --no-secret 
