--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -6,9 +6,12 @@ on:
     branches: [ main ]
 
 jobs:
+
   deploy:
     name: Deploy
     runs-on: windows-latest
+    env:
+      PATH: "${env:PATH};C:/Program Files/Velero"
     steps:
     - name: Checkout
       uses: actions/checkout@v2
