--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -26,7 +26,7 @@ jobs:
       run:
        aws eks update-kubeconfig --region us-east-1 --name velero
     - name: Download Velero
-      run: 
+      run: |
        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero.exe -o velero.exe
        echo %PATH%
     - name: Install velero in eks
