--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -26,9 +26,11 @@ jobs:
       run:
        aws eks update-kubeconfig --region us-east-1 --name velero
     - name: Download Velero
-      run: |
+      run: 
        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero.exe -o velero.exe
-       setx PATH C:/Program Files/PowerShell/7/pwsh.EXE
+    - name: Add Velero to PATH
+      run:
+        setx PATH C:/Program Files/PowerShell/7/pwsh.EXE
     - name: Install velero in eks
       run:  
         velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 --no-secret 
