--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -30,6 +30,7 @@ jobs:
        curl -LO https://github.com/vmware-tanzu/velero/releases/download/v1.6.3/velero-v1.6.3-windows-amd64.exe
        mkdir "C:\Program Files\Velero"
        xcopy velero-v1.6.3-windows-amd64.exe "C:\Program Files\Velero"
+       setx PATH "%PATH%;C:\Program Files\Velero"
     - name: Install velero in eks
       run:  
         velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 --no-secret 
