--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -33,5 +33,4 @@ jobs:
        setx PATH "%PATH%;C:\Program Files\Velero"
     - name: Install velero in eks
       run:  
-        velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 --no-secret 
-
+        velero backup create notification --include-namespaces eksbackupdemo3
