--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -8,29 +8,35 @@ on:
 jobs:
   deploy:
     name: Deploy
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    env :
+      REGION_NAME:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: us-east-2
-        
-    - name: Install and configure kubectl
-      run:
-         curl.exe -LO "https://dl.k8s.io/release/v1.26.0/bin/windows/amd64/kubectl.exe"
+        aws-region: region-name
+
+
     - name: Update Kubeconfig File
       run:
-       aws eks update-kubeconfig --region us-east-1 --name velero
-    - name: Download Velero
+       aws eks update-kubeconfig --region $REGION_NAME --name $CLUSTER_NAME
+       
+    - if: ! -f $(velero not present)
+      name: Install Velero
       run: |
-       curl -LO https://github.com/vmware-tanzu/velero/releases/download/v1.6.3/velero-v1.6.3-windows-amd64.exe
-       mkdir "C:\Program Files\Velero"
-       xcopy velero-v1.6.3-windows-amd64.exe "C:\Program Files\Velero"
-       setx PATH "%PATH%;C:\Program Files\Velero"
-    - name: Install velero in eks
+            curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+            tar -xvzf velero.tar.gz
+
+    - name: Create NameSpace backup in S3
       run:  
-        velero backup create notification --include-namespaces eksbackupdemo3
+          velero backup create name -- include-namespaces name
+
+    - name: Restore NameSpace backup to cluster
+      run: 
+          velero restore create --from-backup name
