--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -21,7 +21,8 @@ jobs:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: region-name
-
+    - name: Install and configure kubectl
+      run :
 
     - name: Update Kubeconfig File
       run:
