--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -9,6 +9,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env :
+      REGION_NAME:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -18,19 +20,23 @@ jobs:
       with:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: us-east-1
-
+        aws-region: region-name
+    - name: Install and configure kubectl
+      run :
 
     - name: Update Kubeconfig File
       run:
-       aws eks update-kubeconfig --region $REGION_NAME --name $CLUSTER_NAME
+       aws eks update-kubeconfig --region us-east-1 --name velero
        
-    - if: ! -f $(velero not present)
-      name: Install Velero
-      run: |
-            curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
-            tar -xvzf velero.tar.gz
 
+    - if: ! -f /usr/local/bin/velero   
+      name: Install Velero
+      
+      run: |
+          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+          tar -xvzf velero.tar.gz
+          mv velero /usr/local/bin/
+       
     - name: Create NameSpace backup in S3
       run:  
           velero backup create name -- include-namespaces name
