--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -23,6 +23,7 @@ jobs:
         aws-region: region-name
     - name: Install and configure kubectl
       run :
+          curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
 
     - name: Update Kubeconfig File
       run:
