--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -29,7 +29,7 @@ jobs:
        
 
 
-      name: Install Velero
+    - name: Install Velero
       run: |
          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
          tar -xvzf velero.tar.gz
