--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -17,10 +17,11 @@ jobs:
       run :
           curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
     - name: Install Velero
-      if: ${{ velero not present }}
+      if: ${{ velero not present() }}
       run: |
           curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
           tar -xvzf velero.tar.gz
+
 
 
        
