--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -18,7 +18,7 @@ jobs:
           curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
    
       - if: ! -f ${{ success() }}
-      - name: Install Velero
+        name: Install Velero
 
         run: |
           
