--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -17,11 +17,10 @@ jobs:
         run:
           curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
    
-      - if: ! -f ${{ success() }}
+      - if: ! -f /usr/local/bin/velero
         name: Install Velero
-
         run: |
-          
-          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
-          tar -xvzf velero.tar.gz
+           curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+           tar -xvzf velero.tar.gz
+
 
