--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -9,18 +9,31 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    env :
+      REGION_NAME:
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Install and configure kubectl
-        run:
-          curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
-   
-      - if: ! -f /usr/local/bin/velero
-        name: Install Velero
-        run: |
-           curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
-           tar -xvzf velero.tar.gz
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+        aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+        aws-region: region-name
 
 
+
+    - name: Install Velero
+      if: ! -f /usr/local/bin/velero
+      run: |
+         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+         tar -xvzf velero.tar.gz
+
+    - name: Create NameSpace backup in S3
+      run:   
+          velero backup create name -- include-namespaces name
+
+    - name: Restore NameSpace backup to cluster
+      run: 
+          velero restore create --from-backup name
